<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context="com.weatherapp.presentation.fragments.SelectCityFragment">


    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/form_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread">

        <ImageView
            android:id="@+id/previewLogo"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:src="@drawable/logo_weather"
            android:contentDescription="@string/weather_app_logo_desc" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/weather_app"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_container">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/form_label_text"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints="addressLocality"
            android:background="@drawable/custom_edit_text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:ems="10"
            android:hint="@string/edit_text_hint"
            android:inputType="textPersonName"
            android:paddingHorizontal="16dp"
            android:textColor="#222222"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/continue_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.5" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_btn"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/continue_btn_text"
            android:textColor="#FFFFFF"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/half_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/half_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="11sp"
            android:text="@string/form_label2_text"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/get_loc_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continue_btn" />


        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@id/half_label"
            app:layout_constraintEnd_toStartOf="@id/half_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/half_label" />

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@id/half_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/half_label"
            app:layout_constraintTop_toTopOf="@id/half_label" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_loc_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/get_location_btn_text"
            android:textColor="#FFFFFF"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/half_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/loading_element"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/logo_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>