<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context="com.weatherapp.presentation.fragments.HomeFragment">

    <include
        android:id="@+id/home_fragment_error_indicator_wrapper"
        layout="@layout/home_error_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/current_weather_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="16dp">

        <include
            android:id="@+id/cur_weather_error_indicator_wrapper"
            layout="@layout/error_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            android:visibility="gone"
            android:background="@drawable/rounded_background"
            app:layout_constraintBottom_toTopOf="@id/tab_layout"
            app:layout_constraintEnd_toEndOf="@id/end_guide_line"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/city_name_container" />


        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@id/city_name_container"
            app:layout_constraintEnd_toStartOf="@id/city_name_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/city_name_container"
            app:layout_constraintVertical_bias="0.5"
            android:contentDescription="@string/back_arrow_icon_desc" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/city_name_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/temp_container"
            app:layout_constraintEnd_toEndOf="@id/end_guide_line"
            app:layout_constraintStart_toEndOf="@id/back_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:includeFontPadding="false"
                android:lineSpacingExtra="0dp"
                android:lineSpacingMultiplier="0.8"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textSize="45sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:fontFamily="sans-serif-black"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city_name"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/temp_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_background"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toTopOf="@id/tab_layout"
            app:layout_constraintEnd_toStartOf="@id/cards_container"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/city_name_container">


            <ImageView
                android:id="@+id/update_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_refresh_24"
                app:layout_constraintBottom_toTopOf="@+id/temp_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintVertical_chainStyle="packed"
                android:contentDescription="@string/update_icon_desc" />

            <TextView
                android:id="@+id/temp_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:includeFontPadding="false"
                android:letterSpacing="0.06"
                android:maxLines="1"
                android:gravity="center"
                app:layout_constrainedHeight="true"
                android:textColor="#FFFFFF"
                android:textSize="130sp"
                app:autoSizeMaxTextSize="130sp"
                app:autoSizeMinTextSize="30sp"
                app:autoSizeStepGranularity="4sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@id/weatherDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/update_icon" />

            <TextView
                android:id="@+id/weatherDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constrainedHeight="true"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:maxLines="2"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@id/current_weather_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/temp_text" />

            <ImageView
                android:id="@+id/current_weather_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weatherDesc"
                tools:src="@drawable/_66"
                android:contentDescription="@string/current_weather_icon_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cards_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/temp_container"
            app:layout_constraintTop_toTopOf="@id/temp_container"
            app:layout_constraintBottom_toBottomOf="@id/temp_container"
            app:layout_constraintEnd_toEndOf="@id/end_guide_line">

            <LinearLayout
                android:id="@+id/wind_container"
                android:paddingHorizontal="30dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rounded_background"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/cloud_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/wind_title"
                    android:text="@string/windiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#FFFFFF" />

                <ProgressBar
                    android:id="@+id/wind_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="60"
                    android:progressBackgroundTint="#ffffff"
                    android:progressTint="#d9534c" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cloud_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="30dp"
                android:background="@drawable/rounded_background"
                app:layout_constraintBottom_toTopOf="@id/humidity_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wind_container">

                <TextView
                    android:id="@+id/cloud_title"
                    android:text="@string/cloudiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/cloud_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#FFFFFF" />
                <ProgressBar
                    android:id="@+id/cloud_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="60"
                    android:progressBackgroundTint="#ffffff"
                    android:progressTint="#d9534c" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/humidity_container"
                android:paddingHorizontal="30dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/rounded_background"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cloud_container">

                <TextView
                    android:id="@+id/humidity_title"
                    android:text="@string/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#FFFFFF" />

                <ProgressBar
                    android:id="@+id/humidity_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="60"
                    android:progressBackgroundTint="#ffffff"
                    android:progressTint="#d9534c" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            style="@style/RoundedTabLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="@id/end_guide_line"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/temp_container" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/forecast_vp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="10dp"

            android:background="@drawable/vp_rounded_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end_guide_line"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/tab_layout"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginBottom="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>